--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-3    "name": "web322-abdul-durran",
-4    "version": "1.0.0",
-5    "description": "",
-6    "scripts": {
-7        "build": "echo \"No build specified\" && exit 1",
-8        "test": "echo \"No test specified\" && exit 1",
-9        "start": "node server.js"
-10    },
-11    "repository": {
-12        "type": "git",
-13        "url": "git+https://github.com/Abdulmuizzd1/web322-abdul-durran.git"
-14    },
-15    "author": "",
-16    "license": "ISC",
-17    "bugs": {
-18        "url": "https://github.com/Abdulmuizzd1/web322-abdul-durran/issues"
-19    },
-20    "homepage": "https://github.com/Abdulmuizzd1/web322-abdul-durran#readme"
-21}
-22 
+  "name": "web322-abdul-durran",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
